--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 django >= 2.1.3, < 2.2.2
 
-djangorestframework >= 3.9.0, < 3.10.0
+djangorestframework >= 3.9, < 3.10
+
+# FIXME: non-production requirement
+flake8 >= 3.6, < 3.7
