--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ django >= 2.1.3, < 2.2.2
 
 djangorestframework >= 3.9, < 3.10
 
+psycopg2
+
 # FIXME: non-production requirement
 flake8 >= 3.6, < 3.7
