--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ django >= 2.1.3, < 2.2.2
 
 djangorestframework >= 3.9, < 3.10
 
-psycopg2
+psycopg2 < 2.8.0
+
+pillow < 5.4.0
 
 # FIXME: non-production requirement
 flake8 >= 3.6, < 3.7
